force-app/main/default/objects/Other_Support_Given__c/Other_Support_Given__c.object-meta.xml
<CustomObject>
    <label>Other Support Given</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Support Given</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>