force-app/main/default/objects/Other_Support_Given__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the Contact who is associated with this donation. Select via lookup</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Other Support Given</relationshipLabel>
    <relationshipName>Other_Support_Given</relationshipName>
    <type>Lookup</type>
</CustomField>