force-app/main/default/objects/Other_Support_Given__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Write in Few words how was this donation made and what was the purpose. What items, other than money were given as donation.</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>