force-app/main/default/objects/Other_Support_Given__c/fields/Philanthropy__c.field-meta.xml
<CustomField>
    <fullName>Philanthropy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Philanthropy associated with this record, or create a new one if needed.</inlineHelpText>
    <label>Philanthropy</label>
    <referenceTo>Philanthropies__c</referenceTo>
    <relationshipLabel>Other Support Given</relationshipLabel>
    <relationshipName>Other_Support_Given</relationshipName>
    <type>Lookup</type>
</CustomField>