force-app/main/default/objects/Other_Support_Given__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Enter the year when this Beneficence was done.</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>